--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.0.0",
+    "@emailjs/browser": "^3.11.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
-    "@emailjs/browser": "^3.11.0",
+    "next": "^14.0.0",
+    "nodemailer": "^7.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.2.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.0",
-    "tailwindcss": "^3.3.5",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
