--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemailer": "^7.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
